--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@ body {
   font-size: 14px;
   font-weight: 400;
   color: black;
-  
 }
 a {
   text-decoration: none;
@@ -80,9 +79,7 @@ h1, h2, h3 {
   padding-left: 20px;
   background: #63a63e;
 }
-
 .header-bottom {  
-
 }
 .header-bottom-wrapper {
   display: flex;
@@ -103,8 +100,6 @@ h1, h2, h3 {
   padding: 0;
   margin-left: 53px;
 }
-
-
 .contacts {
     display: flex;
     flex-direction: column;
@@ -125,6 +120,7 @@ h1, h2, h3 {
 .user-block {
     display: flex;
     flex-direction: row;
+    width: 250px;
 }
 .user-block a {
     margin-left: 10px;
@@ -193,6 +189,8 @@ main {
   position: relative;
 }
 .sliders h2 {
+  padding-top: 30px;
+  padding-left: 25px;
   font-size: 30px;
   font-weight: 700;
   line-height: 30px;
@@ -200,6 +198,8 @@ main {
   text-transform: uppercase;
 }
 .sliders p {
+  margin-top: 8px;
+  padding-left: 25px;
   font-family: 'PT Sans';
   font-size: 18px;
   font-weight: 400;
@@ -223,22 +223,27 @@ main {
   height: 1px;
   clip: rect(0, 0, 0, 0);
 }
+.slider-list {
+  margin: 0;
+}
 .slide1 {
   display: none;
-  background-image: url(/img/slider_1.jpg );
+  background-image: url(../img/slider_1.jpg );
   width: 620px;
   height: 266px;
 }
 /*      Воторй слайд    =/*/
 .slide2 {
   display: none;
-  background-image: url(/img/slider_2.jpg);
+  background-image: url(../img/slider_2.jpg);
   width: 620px;
   height: 266px;
 }
-.button {
+.button-slider {
     display: block;
-    width: 240px;
+    width: 195px;
+    margin-left: 25px;
+    margin-top: 110px;
     font-size: 14px;
     padding: 13px 0;
     line-height: 18px;
@@ -246,6 +251,10 @@ main {
     text-transform: uppercase;
     background: #ee3643;
     text-align: center;
+    border-radius: 3px;
+}
+.button-slider:hover {
+  background: rgba(0,0,0,.2);
 }
 .slider-controls label {
   position: relative;
@@ -261,7 +270,7 @@ main {
   width: 10px;
   height: 10px;
   position: absolute;
-  top: 7px;
+  top: 11px;
   left: 4px;
   z-index: 1;
   border-radius: 50%;
@@ -284,7 +293,8 @@ main {
 #product-2:checked ~ .slider-list .slide2 {
   display: block;
 }
-.slider-controls .active::before {
+#product-1:checked ~ .slider-controls .slider-controls-item--1::before,
+#product-2:checked ~ .slider-controls .slider-controls-item--2::before{
   content: "";
   position: absolute;
   left: 50%;
@@ -293,9 +303,8 @@ main {
   width: 6px;
   height: 6px;
   background: #ee3643;
-  margin: -3px -6px ;
+  margin: 1px -6px ;
   border-radius: 50%;
-  
 }
 /*   желтый прямоуголтники которые я не понимаю  */
  .offers {
@@ -306,17 +315,70 @@ main {
   flex-wrap: wrap;
 }
 .category {
-  width: 300px;
-  height: 123px;
+  padding-top: 26px;
+  padding-left: 23px;
+  width: 277px;
+  height: 97px;
   font-size: 24px;
   margin-bottom: 20px;
   color:#ffffff;
   background-color: #f6b22d;
   list-style: none;
 }
+.category h3 {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 30px;
+}
+  .button-category {
+    display: inline-block;
+    font-size: 14px;
+    padding: 10px 0;
+    margin-top: 10px;
+    text-align: center;
+    width: 135px;
+    color: #ffffff;
+    background: rgba(0,0,0,.1);
+    text-transform: uppercase;
+}
+
+.button-category:hover {
+  background: rgba(0,0,0,.2);
+}
+.category-materials {
+    background: #ffbf47;
+    background-image: url(../img/icon-1.svg);
+    background-repeat: no-repeat;
+    background-position: 210px 50%;
+}
+.category-instrument {
+    background:#3bbce3;
+    background-image: url(../img/icon-2.svg);
+    background-repeat: no-repeat;
+    background-position: 195px 50%;
+}
+.category-technics {
+    background:#dc91d8;
+    background-image: url(../img/icon-3.svg);
+    background-repeat: no-repeat;
+    background-position: 195px 50%;
+  
+}
+.category-discounts {
+  background:#3bbce3;
+    background-image: url(../img/icon-4.svg);
+    background-repeat: no-repeat;
+    background-position: 195px 50%;
+}
+.category-delivery {
+  background: #ffbf47;
+    background-image: url(../img/icon-5.svg);
+    background-repeat: no-repeat;
+    background-position:195px 50%;
+}
 /*  Не получается с желты ми блоками попробую  сделать карточку с дрелью */
 ul {
-  padding: 0;
+   padding: 0;
    text-decoration: none;
    list-style-type: none;
 }
@@ -367,13 +429,7 @@ ul {
 .popular-product-item:hover .actions {
   display:block;
 }
-.button-category {
-  font-size: 14px;
-  width: 138px;
-  color: #ffffff;
-  padding: 10px 0px;
-  background: rgba(0,0,0,.1);
-}
+
 .popular {
   display: flex;
   justify-content: space-between;
